[Auto] Update docs as of 2026-06-17T1819